# ms-oxmsg

./: Cargo.toml
src/: attachments.rs  lib.rs  recipients.rs
src/oxprops/: mod.rs  property_sets.rs  props.rs
src/oxprops/property_ids/: lids.rs  mod.rs  names.rs  tags.rs
