[package]
authors = ["Jake O'Shannessy <joshannessy@affinity-eng.com>"]
edition = "2018"
name = "ms-oxmsg"
version = "0.1.1"

[dependencies]
bitflags = "1"
cfb = "0.7"
chrono = {version = "0.4", features = ["serde"]}
crc = "3"
serde = {version = "1", features = ["derive"]}
uuid = "1"

[dev-dependencies]
regex = "1"
